--- a/SAEW/src/main/webapp/WEB-INF/web.xml
+++ b/SAEW/src/main/webapp/WEB-INF/web.xml
@@ -16,11 +16,11 @@
     <url-pattern>/LoginServelet</url-pattern>
   </servlet-mapping> -->
   <servlet>
-     <servlet-name>LoginSevelet</servlet-name>
+     <servlet-name>LoginServelet</servlet-name>
      <servlet-class>com.sae.controller.LoginServelet</servlet-class>
   </servlet>
   <servlet-mapping>
-     <servlet-name>LoginSevelet</servlet-name>
-     <url-pattern>/login</url-pattern>
+     <servlet-name>LoginServelet</servlet-name>
+     <url-pattern>/LoginServelet</url-pattern>
   </servlet-mapping>
 </web-app>
